--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.4.0",
     "lucide-react": "^0.475.0",
-    "next": "15.1.6",
+    "next": "^15.2.3",
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
