--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^9.2.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
