--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.9.0",
     "@hookform/resolvers": "^4.1.2",
+    "@next-auth/firebase-adapter": "^2.0.1",
     "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-avatar": "^1.1.4",
@@ -29,11 +31,14 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "date-fns": "^3.6.0",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.4.0",
+    "firebase-admin": "^12.7.0",
     "lucide-react": "^0.475.0",
     "next": "^15.2.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.1.91",
     "react": "^18.0.0",
